Fix bugs in guests model

--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -7,7 +7,7 @@
       <%= button_tag(type: 'submit', class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: 'Cancel'), admin_path, class: 'btn btn-danger hvr-sweep-to-right' %>
+      <%= link_to fa_icon("undo", text: 'Cancel'), guests_path, class: 'btn btn-danger hvr-sweep-to-right' %>
     </div>
   <% end %>
 </div>
