--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,7 +1,8 @@
 <div class = 'container level-header guest-page'>
+  <h2> Guest List </h2>
   <% @guests = locals[:guests] if @guests.nil? %> 
   <div class= 'pull-right'>
-    <%= link_to fa_icon("plus", text: 'Add Guest'), new_guest_path, class: "btn btn-add hvr-sweep-to-right", id: 'new-guest-link' %>
+    <%= link_to fa_icon("plus", text: 'Add Guest'), new_guest_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-guest-link' %>
   </div>
   <table class = 'table table-striped'>
     <thead>
@@ -19,9 +20,9 @@
         <td> <%= guest.address %> </td>
         <td> <%= guest.attending %> </td>
         <td> <%= guest.food_preference %> </td>
-        <%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-guest-link' %> 
-        <%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
-                class: "btn btn-danger hvr-sweep-to-right", id: 'delete-guest-link' %>
+        <td><%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-guest-link' %> </td>
+        <td><%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
+                class: "btn btn-danger hvr-sweep-to-right", id: 'delete-guest-link' %></td>
       </tr>
     <%end%>
   </table>
