--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,18 +13,11 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapsable">
           <ul class="nav navbar-nav foo" id="menu">
-             <li class="dropdown">
-              <a href="/about_us" class="dropdown-toggle admin-header hvr-sweep-to-right" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> About Us <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Why Extend?', root_path, class: 'hvr-sweep-to-right'%></li>
-                <li><%= link_to 'Our Mission', root_path, class: 'hvr-sweep-to-right'%></li>
-                <li><%= link_to 'iwavez', root_path, class: 'hvr-sweep-to-right'%></li>
-                <li><%= link_to 'Background', root_path, class: 'hvr-sweep-to-right'%></li>
-                <li><%= link_to 'Historial View', root_path, class: 'hvr-sweep-to-right'%></li>
-              </ul>
-            </li>
+            <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
+            <li><%= link_to 'RSVP', root_path, class: 'hvr-sweep-to-right'%></li>
+            <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+            <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
           </ul>
-
         </div>
       </div>
     </nav>
