--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -3,7 +3,10 @@
     <%= f.text_field :caption, placeholder: 'Enter caption', class: 'form-control required' %>  
     <%= f.text_field :description, placeholder: 'Enter description', class: 'form-control required' %>
     <%= f.number_field :price, placeholder: 'Enter price', class: 'form-control required' %>
-    <%= f.text_field :shop_name, placeholder: 'Enter shop name', class: 'form-control required' %>
+    <%= f.number_field :desired_quantity, placeholder: 'Enter quantity required', class: 'form-control required' %>
+    <%= f.text_field :website_link, placeholder: 'Enter link to product', class: 'form-control required' %>
+    <%= f.file_field :gift_image, placeholder: 'Select image', class: 'form-control required' %>
+    <%= f.collection_select :category_id, Category.all, :id, :name, :prompt => "Select Subject" %>
     <div class='level-header'>
       <%= button_tag(type: 'submit', class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
