Add basic css for headings of gifts index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,14 @@
 .body-style{
   padding-top: 90px;
 }
+
+body {
+  font-family: 'Lato', serif;
+  font-size: 18px;
+}
+
+.gift-categories {
+  font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
+  font-size: 30px;
+  color: #b21972;
+}
