Update details static page with better placeholder text

--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -1,3 +1,10 @@
 <div class='container'>
-<h2> What's the plans? </h2>
+  <h2><i> What is happening on the day? </i></h2>
+  <p> We haven't really finalised it yet</p>
+  <h2><i> How do I get to the venue ? </i></h2>
+  <p> There will be a bus that will run from town </p>
+  <h2><i> Am I able to bring my kids along ? </i></h2>
+  <p> Of course your kids are welcome </p>
+  <h2><i> What is the dress attire ? </i></h2>
+  <p> Formal attire is expected for a classy night </p>
 </div>
