--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,23 +1,32 @@
- <nav class = "navbar navbar-default navbar-fixed-top uppernav" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">
-            <p> TJIW </p>
-          </a>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsable">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapsable">
-          <ul class="nav navbar-nav foo" id="menu">
-            <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
-            <li><%= link_to 'RSVP', root_path, class: 'hvr-sweep-to-right'%></li>
-            <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
-            <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
-          </ul>
-        </div>
+<nav class = "navbar navbar-default navbar-fixed-top uppernav" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        <p> TJIW </p>
+      </a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsable">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapsable">
+      <ul class="nav navbar-nav foo" id="menu">
+        <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'RSVP', root_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
+      </ul>
+      <div class="nav navbar-right header">
+        <% if user_signed_in? %>
+          Logged in as <%= current_user.email %>
+          <%= link_to fa_icon("sign-out", text: "Logout"), destroy_user_session_path, :method => :delete, class: 'btn btn-danger hvr-sweep-to-right navbar-btn' %>
+        <% else %>
+          <%= link_to fa_icon("lock", text: 'Login'), new_user_session_path, class: "btn btn-success navbar-btn hvr-sweep-to-right"  %>  
+          <%= link_to fa_icon("user-plus", text: 'Register'), new_user_registration_path, class: "btn btn-info navbar-btn hvr-sweep-to-right"  %>
+        <% end %>
       </div>
-    </nav>
+    </div>
+  </div>
+</nav>
