--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -2,15 +2,13 @@
   <h2> Guest List </h2>
   <% @guests = locals[:guests] if @guests.nil? %> 
   <div class= 'pull-right'>
-    <%= link_to fa_icon("plus", text: 'Add Guest'), new_guest_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-guest-link' %>
+    <%= link_to fa_icon("plus", text: 'Add Guest'), new_guest_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-guest-link' if current_user && user_signed_in? %>
   </div>
   <table class = 'table table-striped'>
     <thead>
       <th> First Name </th>
       <th> Surname </th>
       <th> Address </th>
-      <th> Attending </th>
-      <th> Food Preference </th>
       <th> Administration </th>
     </thead>
     <% @guests.sort_by(&:"#{'id'}").each do |guest| %>
@@ -18,11 +16,11 @@
         <td> <%= guest.first_name %> </td>
         <td> <%= guest.surname %> </td>
         <td> <%= guest.address %> </td>
-        <td> <%= guest.attending %> </td>
-        <td> <%= guest.food_preference %> </td>
-        <td><%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-guest-link' %> </td>
-        <td><%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
+        <% if current_user && user_signed_in? %> 
+          <td><%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-guest-link' %> </td>
+          <td><%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
                 class: "btn btn-danger hvr-sweep-to-right", id: 'delete-guest-link' %></td>
+        <%end%>
       </tr>
     <%end%>
   </table>
