--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "variables";
+@import "navbar";
 
 .body-style{
   padding-top: 90px;
@@ -27,5 +29,34 @@ body {
 .gift-categories {
   font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
   font-size: 30px;
-  color: #b21972;
+  color: $pink;
+  border-bottom: 1px solid #ccc;
 }
+
+.flash{
+  background-color: rgba(0, 75, 109, 0.17);
+  color: $pink;
+  font: {
+    family: "Tangerin Next";
+    size: 1.3em;
+    weight: 500;
+  }
+  border-radius: 1px;
+  text-align: center;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  margin-top: 5px;
+  &.danger-alert{
+    background-color: rgba(177, 0, 0, 0.13);
+    color: #564444;
+  }
+  &.warning-alert{
+    background-color: lighten($pink, 5%);
+    color: #008000;
+  }
+}
+
+.form-control{
+  border: 1px solid $pink;
+}
+
