Add flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <div id = 'navbar' >
       <%= render 'shared/navbar' %>
     </div>
+    <div class = 'row'>
+      <%= render 'shared/flash_messages', flash: flash %>
+    </div>
     <div id = "container">
       <%= yield %>
     </div>
