--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,8 @@
     <div class="collapse navbar-collapse" id="navbar-collapsable">
       <ul class="nav navbar-nav foo" id="menu">
         <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'RSVP', root_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' if current_user %></li>
+        <li><%= link_to 'RSVP', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
         <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
       </ul>
@@ -23,8 +24,7 @@
           Logged in as <%= current_user.email %>
           <%= link_to fa_icon("sign-out", text: "Logout"), destroy_user_session_path, :method => :delete, class: 'btn btn-danger hvr-sweep-to-right navbar-btn' %>
         <% else %>
-          <%= link_to fa_icon("lock", text: 'Login'), new_user_session_path, class: "btn btn-success navbar-btn hvr-sweep-to-right"  %>  
-          <%= link_to fa_icon("user-plus", text: 'Register'), new_user_registration_path, class: "btn btn-info navbar-btn hvr-sweep-to-right"  %>
+          <%= link_to fa_icon("lock", text: 'Login'), new_user_session_path, class: "btn btn-primary navbar-btn hvr-sweep-to-right"  %>  
         <% end %>
       </div>
     </div>
