--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container level-header gift-page'>
-  <%= link_to fa_icon("plus", text: 'Add Gift'), new_gift_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-gift-link' %>
+  <%= link_to fa_icon("plus", text: 'Add Gift'), new_gift_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-gift-link' if current_user && user_signed_in? %>
   <% @categories = Category.all %>
   <div class="row">
     <% @categories.each do |cat| %>
@@ -9,12 +9,15 @@
         <% group.compact.each do |gift_a| %>
           <div class="col-md-4">
             <%= image_tag gift_a.gift_image, :width => '100%', :height => '100%' %>
-            <b><p><%= gift_a.caption %></p></b>
-            <p><%= number_to_currency gift_a.price %></p>
+            <b><p><%= link_to gift_a.caption, gift_a.website_link %></p></b>
+            <p><i>Price</i>: <%= number_to_currency gift_a.price %></p>
+            <p><i>Quantity</i>: <%= gift_a.desired_quantity %></p>
             <p><%= gift_a.description %></p> 
-            <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift_a.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
-            <%= link_to fa_icon("trash", text: 'Delete'), gift_path(gift_a), method: :delete,
-                  class: "btn btn-danger hvr-sweep-to-right", id: 'delete-gift-link' %></p>
+            <% if current_user && user_signed_in? %>
+              <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift_a.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
+              <%= link_to fa_icon("trash", text: 'Delete'), gift_path(gift_a), method: :delete,
+                    class: "btn btn-danger hvr-sweep-to-right", id: 'delete-gift-link' %></p>
+            <% end %>
           </div>
         <% end %>
       </div>
