--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,10 +14,12 @@
     <div class="collapse navbar-collapse" id="navbar-collapsable">
       <ul class="nav navbar-nav foo" id="menu">
         <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' if current_user %></li>
         <li><%= link_to 'RSVP', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
-        <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
+        <% if current_user %>
+          <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' %></li>
+          <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+        <% end %>
       </ul>
       <div class="nav navbar-right header">
         <% if user_signed_in? %>
