--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -3,25 +3,16 @@
   <% @categories = Category.all %>
   <div class="row">
     <% @categories.each do |cat| %>
-    <h2 class='gift-categories'><%= cat.name %></h2> 
-    <% @gifts.where(category_id: cat.id).in_groups_of(3) do |group| %>
-      <div class="row">
-        <% group.compact.each do |gift_a| %>
-          <div class="col-md-4">
-            <%= image_tag gift_a.gift_image, :width => '100%', :height => '100%' %>
-            <b><p><%= link_to gift_a.caption, gift_a.website_link %></p></b>
-            <p><i>Price</i>: <%= number_to_currency gift_a.price %></p>
-            <p><i>Quantity</i>: <%= gift_a.desired_quantity %></p>
-            <p><%= gift_a.description %></p> 
-            <% if current_user && user_signed_in? %>
-              <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift_a.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
+      <h2 class='gift-categories'><%= cat.name %></h2>
+      <% @gifts.where(category_id: cat.id).each do |gift_a| %>
+        <b><p><%= link_to gift_a.caption, gift_a.website_link %> (x<%=gift_a.desired_quantity%>) - <%= number_to_currency gift_a.price%> </p></b>
+        <p><%= gift_a.description %></p> 
+        <% if current_user && user_signed_in? %>
+          <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift_a.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
               <%= link_to fa_icon("trash", text: 'Delete'), gift_path(gift_a), method: :delete,
                     class: "btn btn-danger hvr-sweep-to-right", id: 'delete-gift-link' %></p>
-            <% end %>
-          </div>
         <% end %>
-      </div>
-    <% end %>
+      <% end %>
     <%end%>
   </div>
 </div>
