--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -3,15 +3,15 @@
     <%= @rsvp.errors.full_messages.first if @rsvp.errors.any? %>
     <%= f.text_field :first_name, placeholder: 'Enter first name', class: 'form-control required' %>  
     <%= f.text_field :surname, placeholder: 'Enter surname', class: 'form-control required' %>
-    <%= f.check_box :attending %>
-    <%= f.select :meal_preference, [ 'Chicken', 'Steak', 'Falafel' ], :prompt => 'Select Preference' %>
+    <%= f.select :attending, [ 'Yes', 'No' ], :prompt => 'Are you attending?' %>
+    <%= f.select :meal_preference, [ 'Chicken', 'Steak', 'Falafel, Not attending' ], :prompt => 'Select Preference' %>
     <%= f.text_field :dietary_requirements, placeholder: 'Enter dietary requirements', class: 'form-control required' %>
 
     <div class='level-header'>
       <%= button_tag(type: 'submit', class: "btn btn-primary", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: 'Cancel'), guests_path, class: 'btn btn-danger hvr-sweep-to-right' %>
+      <%= link_to fa_icon("undo", text: 'Cancel'), root_path, class: 'btn btn-danger hvr-sweep-to-right' %>
     </div>
   <% end %>
 </div>
