--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,11 @@ body {
   border-bottom: 1px solid #ccc;
 }
 
+.modal-heading-style {
+  font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
+  font-size: 28px;
+  color: $pink; 
+}
 .flash{
   background-color: rgba(0, 75, 109, 0.17);
   color: $pink;
@@ -60,3 +65,17 @@ body {
   border: 1px solid $pink;
 }
 
+.gift-button {
+  float: right;
+  margin-left: 1rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  height: 2.3rem;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  color: #555;
+  text-transport: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+}
