Add cg model and cross off gift

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -5,12 +5,37 @@
     <% @categories.each do |cat| %>
       <h2 class='gift-categories'><%= cat.name %></h2>
       <% @gifts.where(category_id: cat.id).each do |gift| %>
-        <b><p><%= link_to gift.caption, gift.website_link %> (x<%=gift.desired_quantity%>) - <%= number_to_currency gift.price%> </p></b>
-        <p><%= gift.description %></p> 
-        <% if current_user && user_signed_in? %>
-          <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
-              <%= link_to fa_icon("trash", text: 'Delete'), gift_path(gift), method: :delete,
-                    class: "btn btn-danger hvr-sweep-to-right", id: 'delete-gift-link' %></p>
+        <% if gift.remainder_available > 0 %>
+          <b><p><%= link_to gift.caption, gift.website_link %> (x<%=gift.desired_quantity%>) - <%= number_to_currency gift.price%> </p></b>
+          <p><%= gift.description %></p>
+          <button type="button" class="btn gift-button" data-toggle="modal" data-target="#myModal">Cross Off Gift</button>
+
+            <!-- Modal -->
+            <div id="myModal" class="modal hidden fade" role="dialog">
+              <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Cross off gift - <%=gift.caption%></h4>
+                  </div>
+                  <div class="modal-body">
+                   Great! You've just bought (or you're about to buy) <%= gift.caption %> for Iain and Tania and want it cross it off their registry. Please enter your name(s) for us to keep track of who bought each item.
+                    <%= render 'cgs/form', gift: gift %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          <% if current_user && user_signed_in? %>
+            <p><%= link_to fa_icon("pencil", text:'Edit'), edit_gift_path(id: gift.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-gift-link' %>
+                <%= link_to fa_icon("trash", text: 'Delete'), gift_path(gift), method: :delete,
+                      class: "btn btn-danger hvr-sweep-to-right", id: 'delete-gift-link' %></p>
+          <% end %>
         <% end %>
       <% end %>
     <%end%>
