--- a/app/views/cgs/_form.html.erb
+++ b/app/views/cgs/_form.html.erb
@@ -1,9 +1,10 @@
 <div class='container form-scrollable'>
-<% @cg = Cg.new %>
+  <% @cg = Cg.new %>
   <%= bootstrap_form_for(@cg, layout: :horizontal)  do |f| %>
-    <%= f.text_field :guest_names, placeholder: 'Enter your names', class: 'form-control required', control_col: "col-sm-3" %>  
-    <%= f.text_field :item_name, control_col: "col-sm-3" %>
-    <%#= f.hidden_field :gift_id, value: gift.id %>
+    <%= f.text_field :guest_names, placeholder: 'Enter your names', class: 'form-control required', control_col: "col-sm-3" %>
+    <%= f.hidden_field :item_name, value: @gift.caption %>
+    <%= f.hidden_field :gift_id, value: @gift.id %>
+
     <div class='level-header'>
       <%= button_tag(type: 'submit', class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
@@ -12,3 +13,4 @@
     </div>
   <% end %>
 </div>
+
