--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -1,8 +1,7 @@
 <div class='container form-scrollable'>
   <%= bootstrap_form_for(@rsvp, layout: :horizontal)  do |f| %>
     <%= @rsvp.errors.full_messages.first if @rsvp.errors.any? %>
-    <%= f.text_field :first_name, placeholder: 'Enter first name', class: 'form-control required' %>  
-    <%= f.text_field :surname, placeholder: 'Enter surname', class: 'form-control required' %>
+    <%= f.text_field :full_name, placeholder: 'Enter full name', class: 'form-control required' %>
     <%= f.select :attending, [ 'Yes', 'No' ], :prompt => 'Are you attending?' %>
     <%= f.select :meal_preference, [ 'Chicken', 'Steak', 'Falafel, Not attending' ], :prompt => 'Select Preference' %>
     <%= f.text_field :dietary_requirements, placeholder: 'Enter dietary requirements', class: 'form-control required' %>
