Allow logged in user to see all claimed gifts and delete them and reset remainder available

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,6 +19,7 @@
         <% if current_user %>
           <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' %></li>
           <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Claimed Gifts', cgs_path, class: 'hvr-sweep-to-right'%></li>
         <% end %>
       </ul>
       <div class="nav navbar-right header">
