--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,9 @@
 @import "font-awesome";
 @import "variables";
 @import "navbar";
+@import "buttons";
+@import "headings";
+@import "forms";
 
 .body-style{
   padding-top: 90px;
@@ -26,18 +29,6 @@ body {
   font-size: 16px;
 }
 
-.gift-categories {
-  font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
-  font-size: 28px;
-  color: $pink;
-  border-bottom: 1px solid #ccc;
-}
-
-.modal-heading-style {
-  font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
-  font-size: 32px;
-  color: $pink; 
-}
 .flash{
   background-color: rgba(0, 75, 109, 0.17);
   color: $pink;
@@ -61,25 +52,10 @@ body {
   }
 }
 
-.form-control{
-  border: 1px solid $pink;
-}
-
-.gift-button {
-  float: right;
-  margin-left: 1rem;
-  font-size: 1rem;
-  line-height: 1rem;
-  height: 2.3rem;
-  border-radius: 4px;
-  border: 1px solid #bbb;
-  color: #555;
-  text-transport: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-}
-
-.tj-modal {
+.cross-off-gift-modal {
   background-color: $white
+}
+
+p {
+  color: $blue;
 }
