--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -7,10 +7,10 @@
     <%= f.text_field :dietary_requirements, placeholder: 'Enter dietary requirements', class: 'form-control required' %>
 
     <div class='level-header'>
-      <%= button_tag(type: 'submit', class: "btn btn-primary", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
+      <%= button_tag(type: 'submit', class: "btn gift-button command-button save-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: 'Cancel'), root_path, class: 'btn btn-danger hvr-sweep-to-right' %>
+      <%= link_to fa_icon("undo", text: 'Cancel'), root_path, class: 'btn gift-button command-button cancel-button hvr-sweep-to-right' %>
     </div>
   <% end %>
 </div>
