--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -2,7 +2,7 @@
   <h2> RSVPS </h2>
   <% @rsvps = locals[:guests] if @rsvps.nil? %> 
   <div class= 'pull-right'>
-    <%= link_to fa_icon("plus", text: 'Add RSVP'), new_rsvp_path, class: "btn btn-primary hvr-sweep-to-right", id: 'new-rsvp-link' if current_user && user_signed_in? %>
+    <%= link_to fa_icon("plus", text: 'Add RSVP'), new_rsvp_path, class: "btn gift-button command-button save-button hvr-sweep-to-right", id: 'new-rsvp-link' if current_user && user_signed_in? %>
   </div>
   <table class = 'table table-striped'>
     <thead>
@@ -21,9 +21,9 @@
         <td> <%= rsvp.meal_preference %> </td>
         <td> <%= rsvp.dietary_requirements %> </td>
         <% if current_user && user_signed_in? %> 
-          <td><%= link_to fa_icon("pencil", text:'Edit'), edit_rsvp_path(id: rsvp.id), class: "btn btn-success hvr-sweep-to-right", id: 'edit-rsvp-link' %>
+          <td><%= link_to fa_icon("pencil", text:'Edit'), edit_rsvp_path(id: rsvp.id), class: "btn gift-button command-button hvr-sweep-to-right", id: 'edit-rsvp-link' %>
           <%= link_to fa_icon("trash", text: 'Delete'), rsvp_path(rsvp), method: :delete,
-                class: "btn btn-danger hvr-sweep-to-right", id: 'delete-rsvp-link' %></td>
+                class: "btn gift-button command-button cancel-button hvr-sweep-to-right", id: 'delete-rsvp-link' %></td>
         <%end%>
       </tr>
     <%end%>
