Fix styles of headings on gift registry

--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -1,8 +1,11 @@
 .gift-categories {
-  font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
-  font-size: 28px;
+  font-family: ‘Raleway,HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 2.5rem;
   color: $pink;
+  letter-spacing: -.1rem;
+  line-height: 1.25;
   border-bottom: 1px solid #ccc;
+  margin-top: 3rem;
 }
 
 .modal-heading-style {
