--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class='container form-scrollable'>
   <%= bootstrap_form_for(@gift, layout: :horizontal)  do |f| %>
-    <%= f.text_field :caption, placeholder: 'Enter caption', class: 'form-control required' %>  
+    <%= f.text_field :caption, placeholder: 'Enter caption', class: 'form-control required', autofocus: true %>
     <%= f.collection_select :category_id, Category.all, :id, :name, :prompt => "Select Category" %>
     <%= f.text_field :description, placeholder: 'Enter description', class: 'form-control required' %>
     <%= f.number_field :price, placeholder: 'Enter price', class: 'form-control required' %>
