--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -1,6 +1,6 @@
 <div class='container form-scrollable'>
   <%= bootstrap_form_for(@guest, layout: :horizontal)  do |f| %>
-    <%= f.text_field :first_name, placeholder: 'Enter first name', class: 'form-control required' %>  
+    <%= f.text_field :first_name, placeholder: 'Enter first name', class: 'form-control required', autofocus: true %>
     <%= f.text_field :surname, placeholder: 'Enter surname', class: 'form-control required' %>
     <%= f.text_field :address, placeholder: 'Enter address', class: 'form-control required' %>
 
