--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,4 +1,5 @@
 <div class = 'container'>
-  <h2>New RSVP</h2>
+  <h2> RSVP</h2>
+  <h4><i> Please RSVP by 31 March 2017 </i></h4>
   <%= render 'form' %>
 </div>
