--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,6 @@
 <nav class = "navbar navbar-default navbar-fixed-top uppernav" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">
-        <p> TJIW </p>
-      </a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsable">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -13,21 +10,22 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapsable">
       <ul class="nav navbar-nav foo" id="menu">
-        <li><%= link_to 'The Deetz', the_details_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'B & G', our_story_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'DETAILS', the_details_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'RSVP', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
-        <li><%= link_to 'Gift Registry', gifts_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'GIFT REGISTRY', gifts_path, class: 'hvr-sweep-to-right'%></li>
         <% if current_user %>
           <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' %></li>
-          <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Claimed Gifts', cgs_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'GUESTS', guests_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'CLAIMED GIFTS', cgs_path, class: 'hvr-sweep-to-right'%></li>
         <% end %>
       </ul>
       <div class="nav navbar-right header">
         <% if user_signed_in? %>
           Logged in as <%= current_user.email %>
-          <%= link_to fa_icon("sign-out", text: "Logout"), destroy_user_session_path, :method => :delete, class: 'btn generic-button command-button cancel-button hvr-sweep-to-right navbar-btn' %>
+          <%= link_to fa_icon("sign-out", text: "LOGOUT"), destroy_user_session_path, :method => :delete, class: 'btn generic-button command-button cancel-button hvr-sweep-to-right navbar-btn' %>
         <% else %>
-          <%= link_to fa_icon("lock", text: 'Login'), new_user_session_path, class: "btn generic-button command-button cancel-button navbar-btn hvr-sweep-to-right"  %>
+          <%= link_to fa_icon("lock", text: 'LOGIN'), new_user_session_path, class: "btn generic-button command-button cancel-button navbar-btn hvr-sweep-to-right"  %>
         <% end %>
       </div>
     </div>
