Add blurb on B and G

--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,5 +1,23 @@
 <div class='container'>
-  <h2> Significant Dates </h2>
+  <div class= 'row'>
+    <div class='col-md-6'>
+      <h2> The Bride - TJ </h2>
+      <li> Born in Lower Hutt </li>
+      <li> Schools: Chilton St James School </li>
+      <li> One sister - Anita </li>
+      <li> Oldest grandchild on both sides of the family </li>
+      <li> Hobbbies: Baking, travelling, exploring </li>
+    </div>
+    <div class = 'col-md-6'>
+      <h2> The Groom - IW </h2>
+      <li> Born in Chelsea, UK </li>
+      <li> Arrived in NZ in 1995 </li>
+      <li> Lived in Karori </li>
+      <li> One sister - Genevieve </li>
+      <li> Hobbies - Gaming, Surfing, Soccer, Longboarding </li>
+    </div>
+  </div>
+  <h2> Our Story </h2>
   <div class='row'>
     <div class='col-md-12'>
       <li><b>11 March 2010</b> - IW and TJ met at ENGR101 Labs </li>
