--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -1,10 +1,90 @@
 <div class='container'>
-  <h2><i> What is happening on the day? </i></h2>
-  <p> We haven't really finalised it yet</p>
-  <h2><i> How do I get to the venue ? </i></h2>
-  <p> There will be a bus that will run from town </p>
-  <h2><i> Am I able to bring my kids along ? </i></h2>
-  <p> Of course your kids are welcome </p>
-  <h2><i> What is the dress attire ? </i></h2>
-  <p> Formal attire is expected for a classy night </p>
+  <h2 align='center'> THE WEDDING </h2>
+  <div class="hr"></div>
+  <div class='row'>
+    <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="event-item">
+        <h2>Ceremony</h2>
+        <span>15:30 - 16:30</span>
+        <p> Sts Peter and Paul Church</p>
+        <p> 60 Knights Road </p>
+        <p> Lower Hutt </p>
+        <p> Wellington </p>
+        <p> New Zealand </p>      
+        <%= image_tag("church.jpg", :alt => "church") %>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="event-item">
+        <h2>Formal Reception</h2>
+        <span>18:30 - 22.00</span>
+        <p> Hutt Golf Club</p>
+        <p> 30 Military Road </p>
+        <p> Lower Hutt </p>
+        <p> Wellington </p>
+        <p> New Zealand </p>      
+        <%= image_tag("reception.jpg", :alt => "reception") %>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="event-item">
+        <h2>Party</h2>
+        <span>22:00 - 12.00</span>
+        <p> Hutt Golf Club</p>
+        <p> 30 Military Road </p>
+        <p> Lower Hutt </p>
+        <p> Wellington </p>
+        <p> New Zealand </p>      
+        <%= image_tag("dance.jpg", :alt => "dance") %>
+      </div>
+    </div>
+  </div>
+
+
+
+
+<!--   <h3 align='center trial'> The Ceremony </h3>
+  <div class='row the-ceremony'>
+    <div class='col-sm-2'>
+      <p> Where: </p>
+    </div>
+    <div class='col-sm-10'>
+      <p> Sts Peter and Paul Church</p>
+      <p> 60 Knights Road </p>
+      <p> Lower Hutt </p>
+      <p> Wellington </p>
+      <p> New Zealand </p>
+    </div>
+  </div>
+  <div class='row the-ceremony'>
+    <div class='col-sm-2'>
+      <p> When: </p>
+    </div>
+    <div class='col-sm-10'>
+      <p> 3.00pm </p>
+    </div>
+  </div>
+
+  <h3 align='center'> The Reception </h3>
+  <div class='row the-reception'>
+    <div class='col-sm-2'>
+      <p> Where: </p>
+    </div>
+    <div class='col-sm-10'>
+      <p> Boulcott Farm </p>
+      <p> Military Road </p> 
+      <p> Lower Hutt </p>
+      <p> Wellington </p>
+      <p> New Zealand </p>
+    </div>
+  </div>
+  <div class='row the-reception'>
+    <div class='col-sm-2'>
+      <p> When: </p>
+    </div>
+    <div class='col-sm-10'>
+      <p> 5.30pm </p>
+    </div>
+  </div>
+ -->
 </div>
