--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar .nav > li > a {
-  color: $black;
+  color: $white;
   font-family: ‘Raleway,HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;
   border: 3px solid transparent;
   padding: 9px 15px;
@@ -14,16 +14,25 @@
 
 .navbar {
   border-radius: 0px !important;
-  background-color: $white !important;
+  background-color: $pink !important;
   font-size: 16px;
   font-family: "futura-pt",sans-serif;
   margin-bottom: 40px;
-  .container-fluid{
+  border-bottom: 0px;
+  .container-fluid {
     padding-left: 11%;
   }
 }
 
 .navbar-nav > li{
-  margin-left:20px;
-  margin-right:20px;
+  margin-left:1px;
+  margin-right:1px;
+  text-align: center;
+  padding: 5px 20px 30px 20px;
+  height: 30px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  display: block;
 }
