--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,16 @@
 @import "headings";
 @import "forms";
 
+@font-face {
+  font-family: "JLynn";
+  src: url(/assets/fonts/JLynn-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "BLESD";
+  src: url(/assets/fonts/BLESD.otf) format("truetype");
+}
+
 .body-style{
   padding-top: 90px;
 }
@@ -27,6 +37,7 @@
 body {
   font-family: 'Lato', serif;
   font-size: 16px;
+  color: $black;
 }
 
 .flash{
@@ -57,5 +68,62 @@ body {
 }
 
 p {
-  color: $blue;
+  color: $black;
 }
+
+.party-group li {
+  margin: 1% 0;
+}
+
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.us-image{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  overflow: auto;
+}
+
+.my-header {
+  font: bold 24px/45px Helvetica, Sans-Serif;
+  color: $white;
+  padding: 10px;
+  background: $black;
+  margin: 0;
+}
+
+.event-item {
+  font-size: 22px;
+  font-weight: 700;
+  color: $pink;
+  margin: 20px 0 0 20px;
+  text-transform: uppercase;
+  text-align: left;
+  background-color: #fafafa;
+  border: 1px solid #eee;
+  margin-top: 30px;
+}
+
+.hotel-item {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+  text-transform: uppercase;
+  text-align: left;
+  background-color: #fafafa;
+  border: 1px solid #eee;
+  margin-top: 20px;
+}
+
+.rating{
+  color: $yellow;
+}
+
