--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,5 +1,6 @@
 <div class = 'container'>
-  <h2> RSVP</h2>
-  <h4><i> Please RSVP by 31 March 2017 </i></h4>
+  <h2 align='center'> RSVP</h2>
+  <h4 align='center'><i> Please RSVP by 31 March 2017 </i></h4>
+  <div class="hr"></div>
   <%= render 'form' %>
 </div>
