RSVP fix and minor changes
- Remove rmagick gem
- Fix up hiding/showing of dietary requirements
- Add ty message

--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -1,16 +1,21 @@
 <div class='container form-scrollable'>
   <%= bootstrap_form_for(@rsvp, layout: :horizontal)  do |f| %>
-    <%= @rsvp.errors.full_messages.first if @rsvp.errors.any? %>
+      <%= @rsvp.errors.full_messages.first do |msg| %>
+        <div class="alert alert-warning" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <%= msg %>
+          </div>
+      <% end %>
     <%= f.text_field :full_name, placeholder: 'Enter full name', class: 'form-control required', autofocus: true, label: 'Full Name' %>
     <%= f.select :attending, [ 'Yes', 'No' ], :prompt => 'Are you attending?', class: 'form-control required' %>
-    <div class='optional-elements hidden'>
+    <div class='optional-elements'>
       <%= f.select :meal_preference, [ 'Chicken', 'Steak', 'Falafel' ], :prompt => 'Select Preference', class: 'form-control', label: 'Meal Preference' %>
       <%= f.text_field :dietary_requirements, placeholder: 'Enter dietary requirements', class: 'form-control', label: 'Dietary Requirements' %>
     </div>
     <div class='level-header'>
       <%= button_tag(type: 'submit', class: "btn generic-button command-button save-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
-      <% end %>      
+      <% end %>
     </div>
   <% end %>
 </div>
