Add custom fonts and edit some images

--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -1,5 +1,5 @@
 .gift-categories {
-  font-family: "JLynn";
+  font-family: "BBD", sans-serif ;
   font-size: 2.5rem;
   color: $pink;
   letter-spacing: -.1rem;
@@ -17,11 +17,13 @@
 }
 
 .caption-style{
-  color: $blue;
+  color: $green;
 }
 
 h2 {
   color: $pink;
+  font-size: 30px;
+  font-family: "JWS", sans-serif; 
 }
 
 .our-story{
