--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,6 +2,6 @@ $white: #FFFFFF;
 $black: #000000;
 $teal: #52ada4;
 $pink: #b21972;
-$blue: #191970;
+$green: #28a428;
 $orange: #e69756;
 $yellow: #ffc400;
