Change fonts within the app and some headings

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,6 +1,11 @@
 @font-face {
-  font-family: 'Cheri';
-  src: url('CHERI.TTF') format('truetype')
+  font-family: 'Ave';
+  src: url('Ave.ttf') format('truetype')
+}
+
+@font-face { /** so cool */
+  font-family: 'JWS';
+  src: url('JWS.ttf') format('truetype')
 }
 
 @font-face {
@@ -9,21 +14,6 @@
 }
 
 @font-face {
-  font-family: 'DS';
-  src: url('DS.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'ELB';
-  src: url('ELB.ttf') format('truetype')
-}
-
-@font-face {
-  font-family: 'Ave';
-  src: url('Ave.ttf') format('truetype')
-}
-
-@font-face { /** so cool */
-  font-family: 'JWS';
-  src: url('JWS.ttf') format('truetype')
+  font-family: 'Avenir';
+  src: url('Avenir.otf') format('opentype')
 }
