--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,41 +1,38 @@
 <div class='container'>
-  <h2 align='center'> ACCOMODATION </h2>
+  <h2 align='center'> Accomodation </h2>
   <div class="hr"></div>
   <div class='row'>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("hotel1.jpg", :alt => "hotel1") %>
         <div class="description">
-          <h3>Hotel Vegas</h3>
+          <h2 class='subheading'>Hotel Vegas</h2>
           <span class="rating">
             <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
-        <a href="#">Location <i class="fa fa-globe"></i></a>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("hotel2.jpg", :alt => "hotel2") %>
         <div class="description">
-          <h3>Hotel Paris</h3>
+          <h2 class='subheading'>Hotel Paris</h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
-        <a href="#">Location <i class="fa fa-globe"></i></a>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("hotel3.jpg", :alt => "hotel3") %>
         <div class="description">
-          <h3>Hotel Garden</h3>
+          <h2 class='subheading'>Hotel Garden</h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
-        <a href="#">Location <i class="fa fa-globe"></i></a>
       </div>
     </div>
   </div>
