--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -1,11 +1,12 @@
 .gift-categories {
-  font-family: "BBD", sans-serif ;
+  font-family: "Avenir", sans-serif ;
   font-size: 2.5rem;
   color: $pink;
   letter-spacing: -.1rem;
   line-height: 1.25;
   border-bottom: 1px solid #ccc;
   margin-top: 3rem;
+  text-transform: uppercase;
 }
 
 .modal-heading-style {
@@ -18,12 +19,20 @@
 
 .caption-style{
   color: $green;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 
 h2 {
   color: $pink;
+  font-size: 50px;
+  font-family: "AR", sans-serif; 
+  text-transform: uppercase;
+}
+
+.subheading {
+  font-family: "Avenir", sans-serif;
   font-size: 30px;
-  font-family: "JWS", sans-serif; 
 }
 
 .our-story{
