--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 }
 
 body {
-  font-family: 'Lato', serif; 
+  font-family: 'DS', serif; 
   font-size: 16px;
   color: $black;
 }
@@ -102,6 +102,7 @@ p {
   background-color: #fafafa;
   border: 1px solid #eee;
   margin-top: 30px;
+  font-family: 'Avenir', sans-serif;
 }
 
 .hotel-item {
