--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container'>  
-  <h2 align='center'>GROOMSMEN</h2>
+  <h2 align='center'>Groomsmen</h2>
   <div class="hr"></div>
   <div class="row">
     <div class="col-md-3 col-sm-2">
