--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
-  <h2 align='center'> THE WEDDING </h2>
+  <h2 align='center'> The Wedding </h2>
   <div class="hr"></div>
   <div class='row'>
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
-        <h2>Ceremony</h2>
+        <h2 class='subheading'>Ceremony</h2>
         <span>15:30 - 16:30</span>
         <p> Sts Peter and Paul Church</p>
         <p> 60 Knights Road </p>
@@ -16,7 +16,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
-        <h2>Formal Reception</h2>
+        <h2 class='subheading'>Formal Reception</h2>
         <span>18:30 - 22.00</span>
         <p> Hutt Golf Club</p>
         <p> 30 Military Road </p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
-        <h2>Party</h2>
+        <h2 class='subheading'>Party</h2>
         <span>22:00 - 12.00</span>
         <p> Hutt Golf Club</p>
         <p> 30 Military Road </p>
