Fix message content of RSVP confirmation to user

--- a/app/views/user_mailer/rsvp_confirmation.text.erb
+++ b/app/views/user_mailer/rsvp_confirmation.text.erb
@@ -1,5 +1,6 @@
 Dear <%= @guest.first_name %>,
-Thank you for RSVPing for our wedding. This email is to confirm the RSVP that you placed. If any details are incorrect, please let us know ASAP:
+
+Thank you for RSVPing for Iain and Tania's wedding. This email is to confirm the RSVP that you placed. If any details are incorrect, please let us know ASAP:
 
 Attending: <%= @rsvp.attending %>
 <% if @rsvp.attending == 'Yes'%>
