Fix titles for bridesmaids and groomsmen

--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -1,6 +1,6 @@
 <div class = 'container'>  
   <div class="row">
-    <h2 align='center'>BRIDESMAIDS</h2>
+    <h2 align='center'>Bridesmaids</h2>
     <div class="hr"></div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/anita.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
@@ -15,7 +15,7 @@
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
         <img src="../images/gen.jpg" alt="Eva Hudson", width='100%', height='180'>
         <div class="description">
-          <h3>Genevieve Walker</h2>
+          <h3>Genevieve Walker</h3>
           <span>Groom's Sister</span>
         </div>
       </a>
