--- a/app/views/cgs/_form.html.erb
+++ b/app/views/cgs/_form.html.erb
@@ -2,7 +2,7 @@
   <% @cg = Cg.new %>
   <%= bootstrap_form_for(@cg, layout: :horizontal)  do |f| %>
     <%= f.text_field :guest_names, placeholder: 'Enter your names', class: 'form-control required', control_col: "col-sm-8", autofocus: true, label: 'Guest Names' %>
-    <%= f.hidden_field :item_name, value: @gift.caption %>
+    <%= f.hidden_field :item_name, value: @gift.name %>
     <%= f.hidden_field :gift_id, value: @gift.id %>
 
     <div class='level-header'>
