--- a/app/views/gifts/_modal.html.erb
+++ b/app/views/gifts/_modal.html.erb
@@ -1,9 +1,9 @@
 <div class='container cross-off-gift-modal'>
   <div class="modal-header modal-heading-style">
-    <h3 id="myModalLabel modal-heading-style">Cross Off Gift - <%=@gift.caption%></h3>
+    <h3 id="myModalLabel modal-heading-style">Cross Off Gift - <%=@gift.name%></h3>
   </div>
   <div class="modal-body">
-    <p>Great! You've just bought (or you're about to buy) <b><%= gift.caption %></b> for Iain and Tania and want it cross it off their registry. Please enter your name(s) for us to keep track of who bought each item.</p>
+    <p>Great! You've just bought (or you're about to buy) <b><%= gift.name %></b> for Iain and Tania and want it cross it off their registry. Please enter your name(s) for us to keep track of who bought each item.</p>
     <%= render 'cgs/form', gift: @gift %>
   </div>
 </div>
