--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TJIW</title>
+    <title>IWTJ</title>
       <%= favicon_link_tag 'heart.ico' %>
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
