--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,6 +1,6 @@
 <div class = 'container level-header gift-page'>
   <div class='row'>
-    <h2 align='center'> GIFT REGISTRY </h2>
+    <h2 align='center'> Gift Registry </h2>
     <div class="hr"></div>
     <i> If you would like to give us a gift for our wedding, please choose a gift from the following that you would like to buy. Once you have decided to buy it/bought it please click 'Cross Off' to avoid duplicate gifts. We really appreciate your generosity and look forward to seeing you at our big day. </i>
   </div>
