--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container'>
-  <h2 align='center'> RSVP</h2>
+  <h2 align='center'> Rsvp</h2>
   <h4 align='center'><i> Please RSVP by 31 March 2017 </i></h4>
   <div class="hr"></div>
   <%= render 'form' %>
